# KPI-insights-bot

./: .dockerignore  .env.example  .replit  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_REPLIT_NOW.md  Dockerfile  INSTANT_DEPLOY.md  KPI_BOT_README.md  README.md  REPLIT_DEPLOYMENT_GUIDE.md  REPLIT_QUICKSTART.md  api_server.py  basic_server.py  create_github_repo.sh  deploy.sh  deploy_immediate.py  deploy_now.sh  deploy_replit.py  docker-compose.yml  emergency_dashboard.py  fix_replit.py  healthcheck.py  init.sql  kpi_dashboard.py  main.py  main_replit.py  nginx.conf  pyproject.toml  quick_deploy.py  replit.nix  replit_fix_imports.py  requirements-replit.txt  requirements-simple.txt  requirements.txt  run_complete_app.py  run_dashboard_only.py  run_kpi_bot.py  run_minimal_complete.py  run_simple_complete.py  (+8 more)
.claude/: settings.local.json
chroma_db/: chroma.sqlite3
config/: config.json
src/: __init__.py  config.py  config_prod.py
src/ai/: __init__.py  claude_explainer.py
src/api/: __init__.py  main.py  main_simple.py
src/auth/: __init__.py  google_auth.py
src/dashboard/: __init__.py  main.py
src/database/: __init__.py  queries.py
src/export/: __init__.py  generators.py
src/ingestion/: __init__.py  data_processor.py  webhook_handler.py
src/kpi_bot/: models.py
src/kpi_bot/anomaly/: anomaly_detector.py
src/kpi_bot/api/: kpi_api.py
src/kpi_bot/auth/: auth_manager.py
src/kpi_bot/calculations/: kpi_engine.py
src/kpi_bot/catalog/: metric_catalog.py
src/kpi_bot/chat/: intent_detector.py  narrative_generator.py
src/kpi_bot/dashboard/: kpi_dashboard.py
src/kpi_bot/oracle/: epm_connector.py
src/kpi_bot/visualizations/: chart_generator.py
src/models/: __init__.py  schemas.py
src/monitoring/: __init__.py  logger.py  metrics.py
src/notifications/: __init__.py  email_sender.py  notification_manager.py  telegram_sender.py
src/rules/: __init__.py  engine.py
src/scraping/: __init__.py  apify_actor.js  apify_client.py  package.json
