[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-fiscal-capivari"
version = "1.0.0"
description = "Sistema de monitoramento e alertas para gastos municipais"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Prefeitura de Capivari", email = "admin@capivari.sp.gov.br"},
]
keywords = ["fiscal", "municipal", "transparency", "ai", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Government",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "streamlit==1.28.1",
    "pandas==2.1.3",
    "pyarrow==14.0.1",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "anthropic==0.3.11",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "openpyxl==3.1.2",
    "reportlab==4.0.7",
    "python-telegram-bot==20.7",
    "schedule==1.2.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "apify-client==1.7.1",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "plotly==5.17.0",
    "psutil==5.9.6",
    "aiohttp==3.9.0",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/ioannisvossos/ia-fiscal-capivari"
Documentation = "https://github.com/ioannisvossos/ia-fiscal-capivari/blob/main/README.md"
Repository = "https://github.com/ioannisvossos/ia-fiscal-capivari"
"Bug Tracker" = "https://github.com/ioannisvossos/ia-fiscal-capivari/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true